orden de burbujas listo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Plus+Jakarta+Sans:ital,wght@0,500;0,600;0,700;0,800;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="style.css">
 
   
@@ -25,42 +26,58 @@
   <section class="not-col">
     <div class="active">
       <img src="assets/images/avatar-mark-webber.webp" alt="">
-      <p><span class="user">Mark Webber</span> reacted to your recent post <span class="bold">My first tournament today!</span></p>
-      <h4>1m ago</h4>
+      <div class="bubble">
+        <p><span class="user">Mark Webber</span> reacted to your recent post <span class="bold">My first tournament today!</span></p>
+        <h4>1m ago</h4>
+      </div>
     </div>
     <div class="active">
       <img src="assets/images/avatar-angela-gray.webp" alt="">
-      <p><span class="user">Angela Gray</span> followed you</p>
-      <h4>5m ago</h4>
+      <div class="bubble">
+        <p><span class="user">Angela Gray</span> followed you</p>
+        <h4>5m ago</h4>
+      </div>
     </div>
     <div class="active">
       <img src="assets/images/avatar-jacob-thompson.webp" alt="">
-      <p><span class="user">Jacob Thompson</span> has joined your group <span class="bold-blue">Chess Club</span></p>
-      <h4>1 day ago</h4>
+      <div class="bubble">
+        <p><span class="user">Jacob Thompson</span> has joined your group <span class="bold-blue">Chess Club</span></p>
+        <h4>1 day ago</h4>
+      </div>
     </div> 
     <div>
       <img src="assets/images/avatar-rizky-hasanuddin.webp" alt="">
-      <p><span class="user">Rizky Hasanuddin</span> sent you a private message</p>
-      <h4>5 days ago</h4>
-      <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
-    </div>
-    <div class="kimberly">
-      <div>
-        <img src="assets/images/avatar-kimberly-smith.webp" alt="">
-        <p><span class="user">Kimberly Smith</span> commented on your picture</p>
-        <h4>1 week ago</h4>
+      <div class="bubble">
+        <p><span class="user">Rizky Hasanuddin</span> sent you a private message</p>
+        <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+        <h4>5 days ago</h4>
       </div>
-      <img src="assets/images/image-chess.webp" alt="">
+    </div>
+    <div>
+      <div class="kimberly">
+        <img src="assets/images/avatar-kimberly-smith.webp" alt="">
+        <div class="k-bubble">
+          <div class="bubble">
+            <p><span class="user">Kimberly Smith</span> commented on your picture</p>
+            <h4>1 week ago</h4>
+          </div>
+          <img src="assets/images/image-chess.webp" alt="">
+        </div>
+      </div>
     </div>
     <div>
       <img src="assets/images/avatar-nathan-peterson.webp" alt="">
-      <p><span class="user">Nathan Peterson</span> reacted to your recent post <span>5 end-game strategies to increase your win rate</span></p>
-      <h4>2 weeks ago</h4>
+      <div class="bubble">
+        <p><span class="user">Nathan Peterson</span> reacted to your recent post <span>5 end-game strategies to increase your win rate</span></p>
+        <h4>2 weeks ago</h4>
+      </div>
     </div>
     <div>
       <img src="assets/images/avatar-anna-kim.webp" alt="">
-      <p><span class="user">Anna Kim</span> left the group <span class="bold-blue">Chess Club</span></p>
-      <h4>2 weeks ago</h4>
+      <div class="bubble">
+        <p><span class="user">Anna Kim</span> left the group <span class="bold-blue">Chess Club</span></p>
+        <h4>2 weeks ago</h4>
+      </div>
     </div> 
   </section>
 </body>
