movil desing check

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <img src="assets/images/avatar-rizky-hasanuddin.webp" alt="">
       <div class="bubble">
         <p><span class="user">Rizky Hasanuddin</span> sent you a private message</p>
-        <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
         <h4>5 days ago</h4>
+        <p class="p-rizky">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
       </div>
     </div>
     <div>
