desde aca implemento para web

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   
 
-  <title>Frontend Mentor | Notifications page</title>
+  <title>Notifications Page</title>
 </head>
 <body>
   <section class="header">
